# strata-bridge

./: .codespellrc  .dockerignore  .env.example  .gitignore  .justfile  .sample_env  .trivyignore  .trivyignore.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE-MIT  Makefile  PUSH_TO_ECR.md  README.md  bridge_logs.txt  compose-public.yml  compose.yml  flake.nix  info.txt  params.toml  rust-toolchain.toml  strata-bridge.code-workspace  strata_bridge_groth16_vk.hex  txns.sh
bridge-guest-builder/bridge-guest/: Cargo.toml
bridge-guest-builder/bridge-guest/src/: main.rs
crates/agent/: Cargo.toml
crates/agent/src/: base.rs  bitcoin_watcher.rs  duty_watcher.rs  lib.rs  operator.rs  proof_interop.rs  signal.rs  strata_rpc.rs  verifier.rs
crates/algebra/: Cargo.toml
crates/algebra/src/: bijection.rs  boolean.rs  category.rs  curry.rs  lib.rs  monoid.rs  predicate.rs  req.rs  retry.rs  semigroup.rs  state_machine.rs
crates/asm-events/: Cargo.toml
crates/asm-events/src/: client.rs  config.rs  event.rs  lib.rs  subscription.rs
crates/asm-proof-impl/: Cargo.toml
crates/asm-proof-impl/src/: lib.rs  program.rs  statements.rs
crates/asm-rpc/: Cargo.toml
crates/asm-rpc/src/: lib.rs  traits.rs  types.rs
crates/bridge-exec/: Cargo.toml
crates/bridge-exec/src/: chain.rs  config.rs  cpfp_adapters.rs  deposit.rs  errors.rs  fees.rs  graph.rs  lib.rs  output_handles.rs
crates/bridge-exec/tests/: counterproof_adaptor_roundtrip.rs  cpfp_e2e.rs
crates/bridge-sm/: Cargo.toml
crates/bridge-sm/src/: config.rs  cross_sm_context.rs  lib.rs  signals.rs  state_machine.rs  tx_classifier.rs
crates/btc-notify/: Cargo.toml
crates/btc-notify/src/: client.rs  config.rs  constants.rs  event.rs  lib.rs  state_machine.rs  subscription.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logging.rs  params.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: claim_contest.rs  claim_payout.rs  connector_a3.rs  connector_a30.rs  connector_a31.rs  connector_c0.rs  connector_c1.rs  connector_cpfp.rs  connector_k.rs  connector_n_of_n.rs  connector_p.rs  connector_s.rs  connectors_a.rs  contest_counterproof.rs  keyed_anchor.rs  lib.rs  multi_anchor.rs  partial_verification_scripts.rs  prelude.rs  stake_path.rs  test_utils.rs  timelocked.rs  unstaking_intent.rs
crates/db/: Cargo.toml
crates/db/src/: errors.rs  lib.rs  operator.rs  public.rs  tracker.rs  traits.rs  types.rs
crates/db2/: Cargo.toml
crates/db2/src/: lib.rs  traits.rs  types.rs
crates/duty-tracker/: Cargo.toml
crates/duty-tracker/src/: constants.rs  contract_actor.rs  contract_manager.rs  contract_persister.rs  contract_state_machine.rs  errors.rs  executors.rs  lib.rs  predicates.rs  s2_session_manager.rs  stake_chain_persister.rs  stake_chain_state_machine.rs  tx_driver.rs  util.rs
crates/key-deriv/: Cargo.toml
crates/key-deriv/src/: address.rs  derive.rs  keys.rs  lib.rs  paths.rs
crates/mosaic-client/: Cargo.toml
crates/mosaic-client-api/: Cargo.toml
crates/mosaic-client-api/src/: api.rs  error.rs  event.rs  lib.rs  types.rs
crates/mosaic-client/src/: client.rs  lib.rs  resolver.rs  rpc.rs  task.rs  tests.rs  util.rs
crates/operator-wallet/: Cargo.toml
crates/operator-wallet/src/: any.rs  config.rs  general.rs  lib.rs  sync.rs  wallet.rs
crates/operator-wallet/tests/: operator_wallet_e2e.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: applicator.rs  duty_dispatcher.rs  errors.rs  events_classifier.rs  events_mux.rs  events_router.rs  lib.rs  observability.rs  persister.rs  pipeline.rs  signals_router.rs  sm_registry.rs  sm_types.rs  testing.rs
crates/p2p-types/: Cargo.toml
crates/p2p-types/src/: bitcoin.rs  deposit_data.rs  descriptor.rs  graph_data.rs  lib.rs  messages.rs  operator.rs  rkyv_wrappers.rs  scope.rs  session_id.rs  stake_chain_id.rs  unstaking_data.rs  wots.rs
crates/p2p-types2/: Cargo.toml
crates/p2p-types2/src/: bitcoin.rs  descriptor.rs  lib.rs  messages.rs  operator.rs
crates/p2p-wire/: Cargo.toml  build.rs
crates/params/: Cargo.toml
crates/params/src/: connectors.rs  default.rs  errors.rs  lib.rs  prelude.rs  sidesystem.rs  stake_chain.rs  tx.rs  tx_graph.rs  types.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: bitcoin.rs  bitcoin_tx.rs  build_context.rs  constants.rs  deposit.rs  duties.rs  errors.rs  key_agg.rs  lib.rs  mosiac.rs  operator_set_schedule.rs  operator_table.rs  proof.rs  secp.rs  test_utils.rs  types.rs  withdrawal.rs  wots.rs  wots_api.rs
crates/rpc/: Cargo.toml
crates/secret-service-client/: Cargo.toml
crates/secret-service-proto/: Cargo.toml
crates/secret-service-server/: Cargo.toml
functional-tests/: .gitignore  README.md  build-bitcoin-snapshot.sh  constants.py  entry.py  env.bash  gen_asm_params_external.py  gen_sp1_params.py  pyproject.toml  run.sh  run_test.sh  sp1-env.bash.sample  sp1-setup.bash
functional-tests/.bitcoin-snapshot/: .gitignore  snapshot.json
functional-tests/_sp1_params/: asm-params.json  asm-vk.json  moho-vk.json
functional-tests/artifacts/: keys.json  mosaic.json  mosaic_depositidx_ckt.v5c
functional-tests/config/: s2_seed
functional-tests/envs/: __init__.py  asm_config.py  asm_env.py  base_env.py  base_test.py  basic_env.py  bridge_network_env.py  btc_config.py  deferred_start_bridge_network_env.py  external_btc_bridge_network_env.py  live_env.py  mosaic_env.py  remote_env.py
functional-tests/factory/: __init__.py  bitcoin.py  bridge_operator.py  s2.py
functional-tests/rpc/: __init__.py  asm_types.py  service.py  types.py
functional-tests/tests/: fn_asm_deposit_test.py  fn_asm_rpc.py  fn_asm_rpc_test.py  fn_asm_test.py  fn_coop_payout_test.py  fn_deposit_test.py  fn_devcli_drt_test.py  fn_network_test.js  fn_network_test.py  fn_rpc_test.py  fn_server_ping.py  fn_uncontested_payout.py
functional-tests/utils/: __init__.py  bitcoin.py  bridge.py  constants.py  crypto.py  deposit.py  dev_cli.py  logging.py  metrics.py  mosaic.py  network.py  nonce_reuse_attack.py  service_names.py  sp1_pre_setup.py  stake.py  utils.py  withdrawal.py
(+761 files in other folders)
