[workspace]
resolver = "2"

members = [
  "crates/algebra",
  "crates/asm-events",
  "crates/asm-rpc",
  "crates/bridge-exec",
  "crates/bridge-proof/primitives",
  "crates/bridge-proof/protocol",
  "crates/bridge-proof/snark",
  "crates/bridge-sm",
  "crates/btc-tracker",
  "crates/common",
  "crates/connectors",
  "crates/connectors2",
  "crates/db",
  "crates/db2",
  "crates/duty-tracker",
  "crates/key-deriv",
  "crates/memory_pprof",
  "crates/operator-wallet",
  "crates/orchestrator",
  "crates/p2p-service",
  "crates/p2p-types",
  "crates/p2p-types2",
  "crates/p2p-wire",
  "crates/params",
  "crates/primitives",
  "crates/rpc",
  "crates/secret-service-client",
  "crates/secret-service-proto",
  "crates/secret-service-server",
  "crates/stake-chain",
  "crates/tx-graph",
  "crates/tx-graph2",
  "crates/wots",

  # binaries listed separately
  "bin/alpen-bridge",
  "bin/asm-runner",
  "bin/assert-splitter",
  "bin/dev-cli",
  "bin/secret-service",

  "bridge-guest-builder",

  # test utilities
  "crates/test-utils",
  "crates/bridge-proof/test-utils",
]

default-members = [
  "bin/alpen-bridge",
  "bin/dev-cli",
  "bin/assert-splitter",
  "bin/asm-runner",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "deny"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.missing_docs = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
rustdoc.all = "deny"
clippy.missing_const_for_fn = "deny"

[workspace.dependencies]
# deps in this workspace
algebra = { path = "crates/algebra" }
alpen-bridge-params = { path = "crates/params" }
btc-tracker = { path = "crates/btc-tracker" }
duty-tracker = { path = "crates/duty-tracker" }
operator-wallet = { version = "0.1.0", path = "crates/operator-wallet" }
prover-test-utils = { path = "crates/bridge-proof/test-utils" }
secret-service-client = { path = "crates/secret-service-client" }
secret-service-proto = { path = "crates/secret-service-proto" }
secret-service-server = { path = "crates/secret-service-server" }
strata-asm-rpc = { path = "crates/asm-rpc" }
strata-bridge-asm-events = { path = "crates/asm-events" }
strata-bridge-common = { path = "crates/common" }
strata-bridge-connectors = { path = "crates/connectors" }
strata-bridge-connectors2 = { path = "crates/connectors2" }
strata-bridge-db = { path = "crates/db" }
strata-bridge-db2 = { path = "crates/db2" }
strata-bridge-exec = { path = "crates/bridge-exec" }
strata-bridge-guest-builder = { path = "bridge-guest-builder" }
strata-bridge-key-deriv = { path = "crates/key-deriv" }
strata-bridge-orchestartor = { path = "crates/orchestrator" }
strata-bridge-p2p-service = { path = "crates/p2p-service" }
strata-bridge-p2p-types = { path = "crates/p2p-types" }
strata-bridge-p2p-types2 = { path = "crates/p2p-types2" }
strata-bridge-p2p-wire = { path = "crates/p2p-wire" }
strata-bridge-primitives = { path = "crates/primitives" }
strata-bridge-proof-primitives = { path = "crates/bridge-proof/primitives" }
strata-bridge-proof-protocol = { path = "crates/bridge-proof/protocol" }
strata-bridge-proof-snark = { path = "crates/bridge-proof/snark" }
strata-bridge-rpc = { path = "crates/rpc" }
strata-bridge-sm = { path = "crates/bridge-sm" }
strata-bridge-stake-chain = { path = "crates/stake-chain" }
strata-bridge-test-utils = { path = "crates/test-utils" }
strata-bridge-tx-graph = { path = "crates/tx-graph" }
strata-bridge-tx-graph2 = { path = "crates/tx-graph2" }
wots = { path = "crates/wots" }

# Dependencies from alpenlabs/alpen pinned to commit 1d88d8 (main @ 2026-02-08)
strata-asm-common = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-asm-proto-bridge-v1 = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-asm-txs-bridge-v1 = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-asm-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-asm-worker = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-bridge-tx-builder = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-bridge-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-btc-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-btcio = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-checkpoint-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-config = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-crypto = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-db-store-sled = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-identifiers = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-key-derivation = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-l1tx = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-ol-chainstate-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-params = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-primitives = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-rpc-api = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-rpc-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-state = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }
strata-storage = { git = "https://github.com/alpenlabs/alpen.git", rev = "1d88d845d807c47aed95f62ac86f804e5f8aab94" }

# Dependencies from alpenlabs/strata-common
strata-codec = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc4" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc4" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc4" }
strata-service = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc4" }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc4" }

strata-p2p = { git = "https://github.com/alpenlabs/strata-p2p.git", tag = "v0.3.5", features = [
  "quic",
  "request-response",
  "gossipsub",
  "kad",
], default-features = false }

zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc11" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc11" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc11" }
zkaleido-sp1-host = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc11" }

# external deps
alloy = { version = "1.4.3", features = ["full", "node-bindings"] }
alloy-signer = "1.4.3"
anyhow = "1.0.95"
arbitrary = { version = "1.4.2", features = ["derive"] }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1.81"
base64 = "0.22.1"
bdk_bitcoind_rpc = "0.18.0"
bdk_esplora = { version = "0.20.1", features = [
  "async-https",
  "async-https-rustls",
  "tokio",
], default-features = false }
bdk_wallet = "1.1.0"
bincode = "1.3.3"
blake3 = "1.6.1"
# TODO(proofofkeags): when updating `bitcoin` to >=0.33.0, go through `btc-tracker` and `tx-driver` and update tests to no longer constrain heights.
bitcoin = { version = "0.32.8", features = ["rand-std", "serde"] }
bitcoin-bosd = { version = "0.9.0", features = ["address"] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoincore-rpc = "0.19.0"
bitcoind-async-client = { version = "0.10.0", features = ["29_0"] }
bitvm = { git = "https://github.com/alpenlabs/BitVM.git", branch = "release/0.1.0-rc.1" }
borsh = { version = "1.5.0", features = ["derive"] }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
corepc-node = { version = "0.10.1", features = ["29_0"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.1", features = ["zeroize"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client", default-features = false, features = [
  "blocking-https-rustls",
  "async-https-rustls",
] }
ethnum = "1.5.0"
futures = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.8.0"
jsonrpsee = "0.24.7"
jsonrpsee-types = "0.24.7"
kanal = "0.1.0-pre8"
libp2p = { version = "0.56.0", features = [
  "noise",
  "gossipsub",
  "tcp",
  "request-response",
  "tokio",
  "secp256k1",
  "macros",
  "ping",
  "yamux",
  "identify",
] }
libp2p-identity = "0.2.12"
miniscript = "12.3.0"
# NOTE: (@Rajil1213) Using an alpenlabs fork that bumps serdect 0.2 → 0.3 to fix a
# serialize/deserialize mismatch in non-human-readable binary formats (e.g.
# postcard). Upstream musig2 ≥0.3.0 ships serdect 0.3 natively, but requires
# secp256k1 0.31 which conflicts with bitcoin 0.32's secp256k1 0.29. This fork
# can be dropped once bitcoin 0.33 (secp256k1 ≥0.31) is released and adopted by
# the workspace and its transitive dependencies (alpen, BitVM, bdk, etc.).
musig2 = { git = "https://github.com/alpenlabs/musig2", branch = "fix/deserialization-mismatch", features = [
  "serde",
  "rand",
] }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
parking_lot = "0.12.3"
postcard = { version = "1.1.3", features = ["alloc"] }
proptest = "1.6.0"
proptest-derive = "0.5.1"
quinn = "0.11.6"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
rkyv = "0.8.8"
secp256k1 = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
serde_with = "3.12.0"
serial_test = "3.2.0"
sha2 = "0.10"
sp1-sdk = "5.0.0"
sp1-verifier = "5.0.0"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "json",
  "macros",
  "derive",
  "migrate",
] }
tempfile = "3.10.1"
# TODO: (@Zk2u) update this once <https://github.com/komora-io/terrors/pull/20> is merged.
terrors = { version = "0.3.2", git = "https://github.com/alpenlabs/terrors", features = [
  "rkyv_32",
  "rkyv_bytecheck",
] }
thiserror = "2.0.3"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", default-features = false, features = ["rt"] }

toml = "0.8.20"
tracing = "0.1.40"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zeroize = { version = "1.8.1", features = ["derive"] }

[patch.crates-io]
# See NOTE on musig2 in [workspace.dependencies] above.
musig2 = { git = "https://github.com/alpenlabs/musig2", branch = "fix/deserialization-mismatch" }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3
