[workspace]
resolver = "2"

members = [
  "crates/algebra",
  "crates/asm-events",
  "crates/asm-rpc",
  "crates/bridge-exec",
  "crates/bridge-sm",
  "crates/btc-tracker",
  "crates/common",
  "crates/connectors",
  "crates/db",
  "crates/proof-db",
  "crates/key-deriv",
  "crates/memory_pprof",
  "crates/mosaic-client",
  "crates/mosaic-client-api",
  "crates/operator-wallet",
  "crates/orchestrator",
  "crates/p2p-service",
  "crates/p2p-types",
  "crates/primitives",
  "crates/rpc",
  "crates/secret-service-client",
  "crates/secret-service-proto",
  "crates/secret-service-server",
  "crates/tx-graph",

  # binaries listed separately
  "bin/strata-bridge",
  "bin/asm-runner",
  "bin/dev-cli",
  "bin/secret-service",

  # test utilities
  "crates/test-utils",
]

default-members = ["bin/strata-bridge", "bin/dev-cli", "bin/asm-runner"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "deny"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.missing_docs = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
rustdoc.all = "deny"
clippy.missing_const_for_fn = "deny"

[workspace.dependencies]
# deps in this workspace
algebra = { path = "crates/algebra" }
btc-tracker = { path = "crates/btc-tracker" }
memory_pprof = { path = "crates/memory_pprof" }
operator-wallet = { version = "0.1.0", path = "crates/operator-wallet" }
secret-service-client = { path = "crates/secret-service-client" }
secret-service-proto = { path = "crates/secret-service-proto" }
secret-service-server = { path = "crates/secret-service-server" }
strata-asm-rpc = { path = "crates/asm-rpc" }
strata-bridge-asm-events = { path = "crates/asm-events" }
strata-bridge-common = { path = "crates/common" }
strata-bridge-connectors = { path = "crates/connectors" }
strata-bridge-db = { path = "crates/db" }
strata-bridge-exec = { path = "crates/bridge-exec" }
strata-bridge-guest-builder = { path = "bridge-guest-builder" }
strata-bridge-key-deriv = { path = "crates/key-deriv" }
strata-bridge-orchestrator = { path = "crates/orchestrator" }
strata-bridge-p2p-service = { path = "crates/p2p-service" }
strata-bridge-p2p-types = { path = "crates/p2p-types" }
strata-bridge-primitives = { path = "crates/primitives" }
strata-bridge-proof-db = { path = "crates/proof-db" }
strata-bridge-rpc = { path = "crates/rpc" }
strata-bridge-sm = { path = "crates/bridge-sm" }
strata-bridge-test-utils = { path = "crates/test-utils" }
strata-bridge-tx-graph = { path = "crates/tx-graph" }
strata-mosaic-client = { path = "crates/mosaic-client" }
strata-mosaic-client-api = { path = "crates/mosaic-client-api" }

# Dependencies from alpenlabs/alpen pinned to commit 201c3fa0 (main @ 2026-03-12)
asm-storage = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-common = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-params = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-proto-bridge-v1 = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-proto-checkpoint = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-txs-bridge-v1 = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-txs-checkpoint = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-asm-worker = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-checkpoint-types-ssz = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }
strata-test-utils-arb = { git = "https://github.com/alpenlabs/asm.git", rev = "124edbf43be12c2ebad4e5776727ba06259f8dfb" }

mosaic-rpc-api = { git = "https://github.com/alpenlabs/mosaic", rev = "e956a2b90b4dcd8c163b50fff2e6e6f0a008cf12" }
mosaic-rpc-types = { git = "https://github.com/alpenlabs/mosaic", rev = "e956a2b90b4dcd8c163b50fff2e6e6f0a008cf12" }

# Dependencies from alpenlabs/strata-common
strata-btc-types = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-codec = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-crypto = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-identifiers = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }
strata-predicate = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13", features = [
  "all",
] }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc13" }

strata-p2p = { git = "https://github.com/alpenlabs/strata-p2p.git", tag = "v0.3.7", features = [
  "quic",
  "request-response",
  "gossipsub",
  "kad",
], default-features = false }

# Dependencies from alpenlabs/ssz-gen
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.14.0" }

zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }
zkaleido-sp1-host = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1.0-alpha-rc21" }

# external deps
alloy = { version = "1.8.1", features = ["full", "node-bindings"] }
alloy-signer = "1.4.3"
anyhow = "1.0.102"
arbitrary = { version = "1.4.2", features = ["derive"] }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1.81"
bdk_bitcoind_rpc = "0.18.0"
bdk_wallet = "1.1.0"
bincode = "1.3.3"
blake3 = "1.8.3"
# TODO: <https://atlassian.alpenlabs.net/browse/STR-2658>
# Update `btc-tracker` and `tx-driver` tests when upgrading `bitcoin` to >=0.33.0.
bitcoin = { version = "0.32.8", features = ["rand-std", "serde"] }
bitcoin-bosd = { version = "0.9.0", features = ["address"] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoincore-rpc = "0.19.0"
bitcoind-async-client = { version = "0.10.2", features = ["29_0"] }
borsh = { version = "1.6.1", features = ["derive"] }
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["cargo", "derive", "env"] }
corepc-node = { version = "0.10.1", features = ["29_0"] }
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client", default-features = false, features = [
  "blocking-https-rustls",
  "async-https-rustls",
] }
# TODO: <https://atlassian.alpenlabs.net/browse/STR-2659>
# Upgrade to foundationdb 0.11.0 once released.
foundationdb = { git = "https://github.com/foundationdb-rs/foundationdb-rs", rev = "7e02f866ff08153f4309a429fc74515c77ea8f07", features = [
  "fdb-7_3",
] }
futures = "0.3.32"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.13.0"
jsonrpsee = "0.26.0"
libp2p = { version = "0.56.0", features = [
  "noise",
  "gossipsub",
  "tcp",
  "request-response",
  "tokio",
  "secp256k1",
  "macros",
  "ping",
  "yamux",
  "identify",
] }
libp2p-identity = { version = "0.2.12", features = ["ed25519"] }
miniscript = "12.3.0"
# NOTE: (@Rajil1213) Using an alpenlabs fork that bumps serdect 0.2 → 0.3 to fix a
# serialize/deserialize mismatch in non-human-readable binary formats (e.g.
# postcard). Upstream musig2 ≥0.3.0 ships serdect 0.3 natively, but requires
# secp256k1 0.31 which conflicts with bitcoin 0.32's secp256k1 0.29. This fork
# can be dropped once bitcoin 0.33 (secp256k1 ≥0.31) is released and adopted by
# the workspace and its transitive dependencies (alpen, BitVM, bdk, etc.).
k256 = { version = "0.13.4", features = ["schnorr"] }
musig2 = { git = "https://github.com/alpenlabs/musig2", branch = "fix/deserialization-mismatch", features = [
  "serde",
  "rand",
] }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
postcard = { version = "1.1.3", features = ["alloc"] }
proptest = "1.11.0"
proptest-derive = "0.5.1"
quinn = "0.11.9"
rand = "0.8.5"
rkyv = "0.8.8"
rustls-pemfile = "2.2.0"
secp256k1 = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
serial_test = "3.4.0"
sha2 = "0.10"
sled = "0.34.7"
sp1-sdk = "5.2.4"
sp1-verifier = "5.2.4"
tempfile = "3.23.0"

# TODO: <https://atlassian.alpenlabs.net/browse/STR-2660>
# Update this dependency after the required upstream changes are merged.
terrors = { version = "0.3.2", git = "https://github.com/alpenlabs/terrors", features = [
  "rkyv_32",
  "rkyv_bytecheck",
] }
thiserror = "2.0.3"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }

toml = "0.8.20"
tracing = "0.1.44"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[patch.crates-io]
# See NOTE on musig2 in [workspace.dependencies] above.
musig2 = { git = "https://github.com/alpenlabs/musig2", branch = "fix/deserialization-mismatch" }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3
