[package]
edition = "2021"
name = "strata-bridge-guest"
version = "0.1.0"

[workspace]

[dependencies]
sp1-zkvm = { version = "4.0.0" }
strata-bridge-proof-protocol2 = { path = "../../crates/bridge-proof/protocol2" }
zkaleido-sp1-adapter = { git = "https://github.com/alpenlabs/zkaleido", features = [
    "zkvm",
] }

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
