[package]
edition = "2021"
name = "strata-bridge-agent"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"

[dependencies]
alpen-bridge-params.workspace = true
strata-bridge-connectors.workspace = true
strata-bridge-db.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof-primitives.workspace = true
strata-bridge-proof-protocol.workspace = true
strata-bridge-proof-snark = { workspace = true, features = ["prover"] }
strata-bridge-stake-chain.workspace = true
strata-bridge-tx-graph.workspace = true

strata-btcio.workspace = true
strata-l1tx.workspace = true
strata-primitives.workspace = true
strata-rpc-api = { workspace = true, features = ["client"] }
strata-rpc-types.workspace = true
strata-state.workspace = true

anyhow.workspace = true
bincode.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoin-bosd.workspace = true
bitvm = { workspace = true }
borsh = { workspace = true }
jsonrpsee.workspace = true
musig2 = { workspace = true, features = ["serde"] }
rand.workspace = true
rkyv.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
serde_json.workspace = true
sp1-verifier.workspace = true
tokio.workspace = true
tracing.workspace = true


ark-serialize = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
