[package]
name = "algebra"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
futures = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tracing.workspace = true

[features]
default = ["async", "proptest"]
async = ["dep:futures", "dep:tokio"]
proptest = ["dep:proptest"]
