[package]
edition = "2021"
name = "strata-asm-proof-impl"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
moho-runtime-impl.workspace = true
moho-runtime-interface.workspace = true
moho-types.workspace = true
ssz.workspace = true
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-spec.workspace = true
strata-asm-stf.workspace = true
strata-identifiers.workspace = true
strata-predicate.workspace = true
zkaleido.workspace = true

bitcoin.workspace = true
borsh.workspace = true
sha2.workspace = true
