[package]
edition = "2024"
name = "strata-asm-rpc"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-asm-proto-bridge-v1.workspace = true
strata-asm-worker.workspace = true
strata-identifiers.workspace = true
strata-state.workspace = true

bitcoin.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde.workspace = true

[features]
default = []
client = ["jsonrpsee/client"]
