[package]
name = "bridge-exec"
version = "0.1.0"
edition = "2024"
description = "Executors for the Strata Bridge"

[lints]
workspace = true

[dependencies]
btc-tracker.workspace = true
operator-wallet.workspace = true
secret-service-client.workspace = true
secret-service-proto.workspace = true
strata-bridge-connectors2.workspace = true
strata-bridge-p2p-service.workspace = true
strata-bridge-p2p-types2.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-sm.workspace = true

bitcoin-bosd.workspace = true

bitcoin.workspace = true
bitcoind-async-client.workspace = true
musig2.workspace = true
terrors.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
