[package]
name = "strata-bridge-exec"
version = "0.1.0"
edition = "2024"
description = "Executors for the Strata Bridge"

[lints]
workspace = true

[dependencies]
algebra.workspace = true
btc-tracker.workspace = true
operator-wallet.workspace = true
secret-service-client.workspace = true
secret-service-proto.workspace = true
strata-bridge-connectors.workspace = true
strata-bridge-db.workspace = true
strata-bridge-p2p-service.workspace = true
strata-bridge-p2p-types.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof.workspace = true
strata-bridge-proofs-common.workspace = true
strata-bridge-sm.workspace = true
strata-bridge-tx-graph.workspace = true
strata-mosaic-client-api.workspace = true

ssz.workspace = true
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-bridge-v1-txs.workspace = true
strata-asm-rpc = { workspace = true, features = ["client"] }
strata-codec.workspace = true
strata-l1-txfmt.workspace = true

bdk_wallet.workspace = true
bitcoin.workspace = true
bitcoin-bosd = { workspace = true, features = ["address"] }
bitcoind-async-client.workspace = true
foundationdb.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["client"] }
musig2.workspace = true
terrors.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
corepc-node.workspace = true
