[package]
name = "strata-bridge-sm"
version = "0.1.0"
edition = "2024"
description = "State machines for the Strata Bridge"

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true

bitcoin.workspace = true
thiserror.workspace = true

[dev-dependencies]
strata-bridge-test-utils.workspace = true

proptest.workspace = true
secp256k1.workspace = true
p2p-types.workspace = true
