[package]
name = "strata-bridge-sm"
version = "0.1.0"
edition = "2024"
description = "State machines for the Strata Bridge"

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true

bitcoin.workspace = true
musig2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
